assets/css/style.css
/* ... */
@media screen and (max-width: 750px) and (orientation: portrait) {
    .intro-section {
        height:1400px;
       
    }    
    .intro-section h1 {
            margin-top: 0px;
            line-height: 50px;
            font-size: 150%;
        }
       .instructions-container{
        margin-left: 0;
        margin: 0 auto;
        height:90%;
        width:95%;
       }
    
        .instructions-container p {
            font-size: min(100%,3.35vmin);
        }
    
     
        .four-photo-grid {
                margin: 0 5vmin;
                grid-template-areas:
                "a1"
                "b1"
                "a2"
                "b2"
                "a3"
                "b3"
                "a4"
                "b4";
                grid-template-columns: repeat(1, 1fr);
                grid-template-rows: 200px 110px;
                grid-auto-rows: 200px 110px;
                row-gap: 10px;
                width:90%;
            }
            .three-photo-grid {
                margin: 0 5vmin;
                grid-template-areas:
                "a1"
                "b1"
                "a2"
                "b2"
                "a3"
                "b3";
                grid-template-columns: repeat(1, 1fr);
                grid-template-rows: 300px 110px;
                grid-auto-rows: 300px 110px;
                row-gap: 10px;
                width:90%;
            }
    
            #bottom-section-grid {
                margin: 0 5vmin;
                grid-template-areas:
                "a1"
                "b1"
                "a2"
                "b2"
                "a3"
                "b3";
                grid-template-columns: repeat(1, 1fr);
                grid-template-rows: 300px 110px;
                grid-auto-rows: 300px 110px;
                row-gap: 10px;
            }
            .tuition-sections{
                height:1350px;
            }
            .tuition-sections h1 {
                margin-top: 0px;
                line-height: 50px;
                font-size: 150%;
            }
            #hh-a1, #hh-a2, #hh-a3, #fs-a1, #fs-a2, #fs-a3 {
               padding-right:8.5%
            }     
            .bottom-section {
                margin-bottom: 30px;
            }

            .demo-images {
                width: 260px;
            }
}

